# brownfield-cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run_commit.txt  lineage_graph.json  module_graph.json  survey_analytics.json
docs/: ARCHITECTURE_NOTES.md  FINAL_REPORT.md  INTERIM_REPORT.md
roo-code-cartography/: CODEBASE.md  cartography_trace.jsonl  day_one_brief.json  last_run_commit.txt  lineage_graph.json  onboarding_brief.md  survey_analytics.json
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  python_data_flow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  edges.py  nodes.py
tests/: __init__.py  test_models.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
