[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Multi-agent codebase intelligence system for brownfield FDE: architectural map, data lineage, and living context."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-yaml>=0.0.6",
    "sqlglot>=24.0.0",
    "networkx>=3.2",
    "numpy>=1.24",
    "scipy>=1.11",
    "pydantic>=2.5",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "GitPython>=3.1.40",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Full AST for JavaScript/TypeScript (optional; analyzer degrades gracefully if not installed)
js = [
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]
# For Phase 3–4: Semanticist, Archivist, Navigator
llm = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
cartographer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
